@@ -1,5 +1,11 @@
 [b]Version 0.6.8[/b]:
 
+(2009-04-24)
+ * Deleted the option "Change volume just before playing" (Preferences -> 
+   General -> Audio). That option had sense when a patch was required for the
+   -volume option, but not now.
+   Now it will just use -volume if using mplayer >= SVN r27872.
+
 (2009-04-23)
  * Started to implement the possibility to customize the options for the
    audio/video filters passed to mplayer (in the section [filter_options] 
